=================== Release 1.0 2017-04-15 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/XX/XX)
        * Added final support for the BrainstormingBucket function. (2017/04/01)
        * Added support for the BrainstormingBucket function. (2017/03/31)
        * Disabled user interaction with the charts. (2017/03/30)
        * Added support for a chart displaying days SR grouped by week day. (2017/03/30)
        * Added necessary files and pods for charts. (2017/03/29)
        * Minor modification to include parcial percentages from tasks into SR for the day. (2017/03/23)
        * Added one new configuration option for showing local notification's messages. (2017/03/23)
        * Added GoodiesView. (2017/03/23)
        * Corrected minor bug with the BackupView. (2017/03/23)
        * Added support for limited editing on a new task. (2017/03/23)
        * Corrected minor bug with editing mode for tasks during FirstDay. (2017/03/23)
        * Corrected a bug where the task's table was not being refreshed after adding a new task. (2017/03/23)
        * Added support to change the state of DILATED tasks which have been migrated for tomorrow and only during the acceptance period of the current project. They can only be changed to PENDING or DILATE. (2017/03/22)
        * Added support for thousand separator. (2017/03/22)
        * Corrected a bug with the presentation of messages. Also added support for gestures in floating views. Also migrated AddView to the menu for ViewProjects. (2017/03/22)
        * Added support for configurations. (2017/03/21)
        * New L&F dark. (2017/03/21)
        * Modifications to the backup view. (2017/03/21)
        * Added support for auto-migrating core data models and some other minor modifications. (2017/03/21)
        * Added support for backups to iCloud in XML format. (2017/03/20)